# learning-notes

./: .gitignore  .gitmodules  README.md  beautifulsop.py  jieba包测试.py  log.md  pkg_csv.py  ss  testFile  testFile2  wget.py  xlrdtest.py  xlwttest.py  日记.md  日记.md - 快捷方式.lnk  进程池.py
algorithm/test/: test.c
c/linkedList/: demo
c/search/: binarySearch.c  quickSort  quickSort.c
c/stack/: yym-cal.cpp
c/tree/: bree.c  tree23.c
docker/flask1/: .bashrc  Dockerfile
docker/mynginx/: .dockerignore  Dockerfile  the-context
docker/redis/: Dockerfile
go/hello/: hello.go
haskell/: Functor  Functor.hs  IO.hs  LockerMap  LockerMap.hs  Map.hs  Module1.hi  Recursive  Recursive.hi  Recursive.hs  TrafficLight  TrafficLight.hs  YesNo  YesNo.hs  hello  hello.hs  maxium.hs  testmodule1  testmodule1.hi  testmodule1.hs
haskell/IO/: ByteString.hs  IO.hs  IO_deleteItem.hs  IO_file.hs  IO_forM.hs  IO_forever.hs  IO_getContents.hs  IO_sequence.hs  IO_when.hs  cmdProgram.hs  haiku2.txt  todo.hs  todo.txt
haskell/error/: erroekinds.hs  error1.hs  throw.hs
haskell/functors/: fmapIO.hs
haskell/module/: Car  Car.hs  Module1.hs  Shapes.hs  aaa  aaa.hs  test.hs  testShape  testShape.hs  testmodule1  testmodule1.hs
haskell/problems/: shortestRoad.hs  solveRPN.hs
java/: test.java
java/southwind_springcloudalibaba/: pom.xml
java/trdthg_shiro/: pom.xml
js/: .gitignore  grid.html  jsdoc.js
js/express-starter/: serverless.yaml
js/hello_express/: express.js  package.json
js/mjs/: a.mjs  b.js  package.json
js/practice/: promise_test.js
js/script/: ssa.js
js/short-url/: demoapp.js  demoapp2.js  (+3 more)
matplotlib/: 3D图.py  img图片.py  subplot多合一显示.py  动画.py  散点图.py  柱状图.py  等高线图.py  线性图.py
other/: aaa  hello-flask-server.py
pandas/: pd_read_csv.py  test.csv
pkg/: c_copy.c  c_dll.py  获取某月天数.py
playground/: aaa  aaa.csv  aaa.py  first.v  playjs.js  timer.go  use_camera.py
python/: redis_.py  requirements.txt
rust/hello_net/hello_webserver/: Cargo.toml
rust/hello_net/hello_webserver/src/: lib.rs
rust/rsbook/: Cargo.toml  README.md
rust/rsbook/assets/: README.md  config copy.json  config.json  index.html  other.html  python.md
rust/rsbook/assets/css/: index.css  prism.css
rust/rsbook/kk/docs/: README.md
rust/rsbook/kk/docs/.rsbook/: config.json
rust/rsbook/kk/docs/.rsbook/components/: hello.vue
rust/rsbook/kk/docs/rust/: lists.md  rust.md
rust/rsbook/src/: cli.yml  lib.rs  main.rs
rust/rsbook/src/template/: mod.rs
rust/rsbook/src/util/: config.json  file.rs  mod.rs  parse.rs  path.rs
rust/rsw/: Cargo.toml
rust/rsw/src/: cli.yml  main.rs
rust/rsw/src/util/: mod.rs
rust/rust-practice/: Cargo.toml
rust/rust-practice/src/: main.rs
rust/rustcookbook/: CONFIG.env  Cargo.toml  cats.db  cookbook.md  csv.csv
rust/rustcookbook/src/: build.rs  hello.c  hello.cpp  lib.rs  main.rs
rust/rustcookbook/src/algorithms/: mod.rs  random.rs  sort.rs
rust/rustcookbook/src/cmd/: ansi.rs  clap.rs  mod.rs
rust/rustcookbook/src/compressing/: mod.rs
rust/rustcookbook/src/concurrency/: data_parallelism.rs  explicit_threads.rs  mod.rs
rust/rustcookbook/src/cryptography/: encryption.rs  hashing.rs  mod.rs
rust/rustcookbook/src/database/: mod.rs  postgras.rs  sqlite.rs
rust/rustcookbook/src/datastructures/: bitfield.rs  mod.rs
rust/rustcookbook/src/datetime/: mod.rs
rust/rustcookbook/src/debugging/: log.rs  mod.rs  with_c.rs
rust/rustcookbook/src/encoding/: mod.rs  parse_charset.rs  parse_csv.rs  parse_structured_data.rs
rust/rustcookbook/src/errorhandling/: customed_error.rs  errorchain_.rs  mod.rs
rust/rustcookbook/src/filesystem/: dir_travel.rs  mod.rs  read_write.rs
rust/rustcookbook/src/operatingsystem/: external_command.rs  mod.rs
rust/rustcookbook/src/tests/: mod.rs
rust/rustcookbook/src/webprogramming/: client.rs  mod.rs  parse_links.rs  parse_url.rs
rust/rustcookbook/sss/: text.txt
tensorflow/: InceptionNet.py  iris.py  iris_1.py  iris_2.py  load_iris.py  loss_mse.py  mnist.py  mnist_断点续训.py  tf1.py  字母预测.py  字母预测2.py  损失函数.py  缓解过拟合.py  股票预测.py  股票预测2.py
util/: VPS.html
web_server/: client.py  derun.py  runcmd.java  web_flask.py
算法/: Solution.java  sss.java  自定义邻接表图类.py
(+323 files in other folders)
