[package]
name = "rsw"
version = "0.1.0"
authors = ["trdthg@outlook.com"]
edition = "2018"

[[bin]]
name = "rsw"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = {version = "2.33.3", features = ["yaml"]}
regex = "1.5.4"