[package]
name = "rustcookbook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"

ansi_term = "0.12"
clap = "2.33"

tar = "0.4"
flate2 = "1.0"

error-chain = "0.12"

crossbeam = "0.8"
crossbeam-channel = "0.5"
lazy_static = ""