[package]
name = "rustcookbook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
cc = "1"

[dependencies]
rand = "0.8"
rand_distr = "0.4"

ansi_term = "0.12"
clap = "2.33"

tar = "0.4"
flate2 = "1.0"

error-chain = "0.12"

crossbeam = "0.8"
crossbeam-channel = "0.5"
lazy_static = "1.4" # 

ring = "0.16"
threadpool = "1.8"

num_cpus = "1.13"
walkdir = "2.3"

image = "0.23"
num = "0.4"

rayon = "1.5"

glob = "0.3"

data-encoding = "2.3"

bitflags = "1.3"

rusqlite = {version = "0.25", features = ["bundled"] }

chrono = "0.4"

env_logger = "0.9"
log = "0.4"
log4rs = "1.0"
