[package]
name = "rustcookbook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "src/build.rs"

[build-dependencies]
cc = "1"

[dependencies]
# 1 algorithm
rand = "0.8"
rand_distr = "0.4"
# 2 cmd
ansi_term = "0.12"
clap = "2.33"
# 3 tar
tar = "0.4"
flate2 = "1.0"
# 4 concurrency
crossbeam = "0.8"
crossbeam-channel = "0.5"
lazy_static = "1.4" # 
# 5 cryptography
ring = "0.16"
threadpool = "1.8"
num_cpus = "1.13"
walkdir = "2.3"
image = "0.23"
num = "0.4"
rayon = "1.5"
glob = "0.3"
data-encoding = "2.3"
# 6 data structure
bitflags = "1.3"
# 7 db
rusqlite = {version = "0.25", features = ["bundled"] }
# 8 date time
chrono = "0.4"
# 9 log debugging
env_logger = "0.9"
log = "0.4"
log4rs = "1.0"
# 10 encoding
# data-encoding = "2.3.2" also used in cryptography
percent-encoding = "2.1"
url = "2.2"
base64 = "0.13"
csv = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
# 大小端对齐用
# byteorder = "1.4"
# 11 错误处理
error-chain = "0.12"
# 12 文件系统
same-file = "1.0"
# glob = "0.3"
# walkdir = "2.3"
memmap = "0.7"
# 13 硬件支持
# num_cpus  num_cpus::get()获取逻辑cpu数量
# 14 内存管理
# lazy_static 声明延迟计算常量(全局静态常量)
# 15 服务器
# std::net 无
# 16 操作系统
regex = "1.5"
# 17 科学计算 跳过

# 18 文本处理 跳过

# 19 Web编程
tokio = { version = "1.11", features = ["full"] }
select = "0.5"
reqwest = "0.11"

