[package]
name = "hello_webserver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hello_webserver"
path = "src/main.rs"

[dependencies]
serde_json = ""
serde_derive = ""
serde = { version = "1.0", features = ["derive"] }
